--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 td {
-	font-family: Verdana, Geneva, Arial, helvetica, sans-serif;
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif , Geneva, Arial, helvetica, sans-serif;
 }
 
 th {
