--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ td {
 }
 
 th {
-	font-family: arial, Geneva, Arial, helvetica, sans-serif;
+	font-family: Verdana, Geneva, Arial, helvetica, sans-serif;
 }
